--- a/source/less/blocks/addition.less
+++ b/source/less/blocks/addition.less
@@ -71,9 +71,9 @@
     }
 
     @media (min-width: @desktop-width) {
-      left: 360px;
+      left: 124%;
 
-      width: 1080px;
+      width: 900px;
     }
   }
 }
