--- a/source/less/blocks/contacts-request.less
+++ b/source/less/blocks/contacts-request.less
@@ -72,8 +72,8 @@
     }
 
     @media (min-width: @desktop-width) {
-      left: 104.7%;
-      width: 775px;
+      left: 103.8%;
+      width: 640px;
     }
   }
 }
@@ -91,6 +91,7 @@
     display: flex;
     align-items: baseline;
     margin-left: 112px;
+    margin-right: 50px;
     padding-top: 5px;
   }
 }
@@ -111,7 +112,7 @@
   }
 
   @media (min-width: @desktop-width) {
-    margin-right: 78px;
+    margin-right: 58px;
     width: 49%;
   }
 }
@@ -181,6 +182,8 @@
 
     @media (min-width: @desktop-width) {
       left: 15px;
+
+      width: 83%;
     }
   }
 
