--- a/source/less/blocks/main-products.less
+++ b/source/less/blocks/main-products.less
@@ -11,8 +11,8 @@
   }
 
   @media (min-width: @desktop-width) {
-    margin-left: 0;
-    margin-right: 0;
+    margin-left: 110px;
+    margin-right: 110px;
   }
 }
 
