--- a/source/less/blocks/site-list.less
+++ b/source/less/blocks/site-list.less
@@ -68,11 +68,11 @@
   }
 }
 
-.site-list__item a:hover {
+.site-list__item:not(.site-list__item--current) a:hover {
   color: rgba(17, 17, 17, 0.6);
 }
 
-.site-list__item a:active {
+.site-list__item:not(.site-list__item--current) a:active {
   color: rgba(17, 17, 17, 0.3);
 }
 
