--- a/source/less/blocks/additional-products.less
+++ b/source/less/blocks/additional-products.less
@@ -45,9 +45,9 @@
     }
 
     @media (min-width: @desktop-width) {
-      left: -8.3%;
+      left: -9.2%;
 
-      width: 5%;
+      width: 6.5%;
     }
   }
 
@@ -122,6 +122,8 @@
     display: flex;
     justify-content: space-between;
     padding-bottom: 0;
+    padding-left: 0;
+    padding-right: 0;
     width: 100%;
 
     border: none;
@@ -164,7 +166,7 @@
 
   @media (min-width: @desktop-width) {
     margin-top: 10px;
-    width: 285px;
+    width: 200px;
   }
 }
 
