--- a/source/less/blocks/feedback.less
+++ b/source/less/blocks/feedback.less
@@ -10,18 +10,10 @@
 }
 
 .feedback__wrapper {
-  width: 280px;
-
-  @media (min-width: @tablet-width) {
-    width: 708px;
-  }
-
   @media (min-width: @desktop-width) {
     display: flex;
     flex-wrap: wrap;
     /*justify-content: space-between;*/
-
-    width: 1220px;
   }
 }
 
@@ -40,6 +32,7 @@
 
   @media (min-width: @desktop-width) {
     justify-content: flex-start;
+    margin-bottom: 0;
     margin-left: 111px;
   }
 }
