--- a/source/less/blocks/program-selection.less
+++ b/source/less/blocks/program-selection.less
@@ -21,9 +21,9 @@
 
   @media (min-width: @desktop-width) {
     margin-bottom: 85px;
-    margin-left: 50px;
+    margin-left: 10px;
     margin-right: 0;
-    width: 570px;
+    width: 135%;
   }
 }
 
