исправляет макет по пиксельперфекту

--- a/source/less/blocks/contact-us.less
+++ b/source/less/blocks/contact-us.less
@@ -15,7 +15,6 @@
   display: flex;
   justify-content: space-between;
 
-  padding-bottom: 10px;
   padding-left: 19px;
 
   @media (min-width: @tablet-width) {
@@ -44,7 +43,7 @@
 
 .contact-us__slogan {
   margin-top: 31px;
-  margin-right: 5px;
+  margin-right: 7px;
 
   font-size: @medium-font-size;
   line-height: @big-line-height;
@@ -69,6 +68,7 @@
   line-height: @big-line-height;
   font-style: normal;
   text-align: left;
+  text-transform: none;
   color: @color-text;
 
   @media (min-width: @tablet-width) {
