--- a/source/less/blocks/intro.less
+++ b/source/less/blocks/intro.less
@@ -4,7 +4,8 @@
   width: 100%;
 
   @media (min-width: @tablet-width) {
-    margin-left: 120px;
+    margin-bottom: 65px;
+    margin-left: 115px;
     min-height: 775px;
   }
 
@@ -27,7 +28,7 @@
 }
 
 .intro__presentation {
-  margin-bottom: 150px;
+  margin-bottom: 140px;
 
   height: 305px;
 
@@ -55,7 +56,7 @@
   color: #ffffff;
 
   @media (min-width: @tablet-width) {
-    margin-bottom: 33px;
+    margin-bottom: 37px;
 
     font-size: 60px;
     line-height: 60px;
@@ -111,7 +112,7 @@
 
   @media (min-width: @tablet-width) {
     top: 29%;
-    left: -10%;
+    left: -11%;
     z-index: 0;
 
     display: block;
@@ -133,11 +134,15 @@
 
   @media (min-width: @tablet-width) {
     position: relative;
-    bottom: 205px;
+    bottom: 190px;
     z-index: 5;
 
     margin-left: 0;
     margin-right: 0;
+    padding-bottom: 16px;
     width: 245px;
+
+    font-size: 20px;
+    line-height: 20px;
   }
 }
