--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -157,6 +157,9 @@
   display: block;
   margin-top: 7px;
 
+  width: 27px;
+  height: 34px;
+
   @media (min-width: @tablet-width) {
     margin-top: 0;
     margin-left: 23px;
@@ -164,6 +167,9 @@
 }
 
 .copyright__icon-htmlacademy {
+  width: 27px;
+  height: 34px;
+
   fill: #666666;
 }
 
