--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -3,6 +3,7 @@
 
   @media (min-width: @tablet-width) {
     display: flex;
+    margin-bottom: 15px;
     padding-left: 30px;
     padding-right: 30px;
   }
@@ -20,11 +21,12 @@
 
 .page-header__logo {
   display: block;
-  margin-bottom: 20px;
+  margin-bottom: 15px;
   margin-right: 90px;
 
   @media (min-width: @tablet-width) {
     margin-top: 7px;
+    margin-right: 95px;
   }
 
   @media (min-width: @desktop-width) {
