--- a/source/less/blocks/advantages.less
+++ b/source/less/blocks/advantages.less
@@ -1,4 +1,5 @@
 .advantages__title {
+  margin-top: 17px;
   margin-left: 22px;
 
   font-size: @big-font-size;
@@ -21,7 +22,7 @@
 }
 
 .advantages-list {
-  padding-bottom: 25px;
+  padding-bottom: 5px;
   margin-left: 20px;
 
   .list-reset();
@@ -133,7 +134,7 @@
   position: relative;
   z-index: 5;
 
-  margin-bottom: 33px;
+  margin-bottom: 25px;
   padding-left: 80px;
 
   font-family: "Arial", sans-serif;
