--- a/source/less/blocks/program-type.less
+++ b/source/less/blocks/program-type.less
@@ -44,7 +44,8 @@
 .program-type-list__item h3 {
   position: relative;
 
-  padding-top: 39px;
+  margin-bottom: 30px;
+  padding-top: 25px;
   padding-left: 70px;
 
   font-size: 24px;
@@ -53,7 +54,10 @@
   color: @color-title;
 
   @media (min-width: @tablet-width) {
+    padding-top: 81px;
+    padding-left: 0;
     font-size: 36px;
+    text-align: left;
   }
 
   @media (min-width: @desktop-width) {
@@ -66,7 +70,7 @@
 .program-type-list__slim::before {
   content: "";
   position: absolute;
-  top: 40%;
+  top: 35%;
   left: 0;
 
   width: 50px;
@@ -95,7 +99,7 @@
 .program-type-list__slim::after {
   content: "";
   position: absolute;
-  top: 40%;
+  top: 35%;
   left: 5%;
 
   width: 35px;
@@ -124,7 +128,7 @@
 .program-type-list__pro::before {
   content: "";
   position: absolute;
-  top: 40%;
+  top: 35%;
   left: 0;
 
   width: 50px;
@@ -153,8 +157,8 @@
 .program-type-list__pro::after {
   content: "";
   position: absolute;
-  top: 55%;
-  left: -5%;
+  top: 50%;
+  left: -3%;
 
   width: 67px;
   height: 28px;
@@ -180,7 +184,8 @@
 }
 
 .program-type-list__item p {
-  padding-bottom: 25px;
+  margin-top: 0;
+  padding-bottom: 23px;
 
   font-family: "Arial", sans-serif;
   font-size: @main-font-size;
@@ -235,8 +240,8 @@
   &::after {
     content: "";
     position: absolute;
-    top: 20%;
-    right: 45%;
+    top: 18%;
+    right: 49%;
 
     width: 25px;
     height: 12px;
