исправление проекта по пиксельперфекту

--- a/source/less/blocks/contact-us.less
+++ b/source/less/blocks/contact-us.less
@@ -18,6 +18,7 @@
   padding-left: 19px;
 
   @media (min-width: @tablet-width) {
+    padding-top: 35px;
     padding-left: 71px;
     padding-right: 71px;
   }
