--- a/source/less/blocks/intro.less
+++ b/source/less/blocks/intro.less
@@ -23,6 +23,10 @@
   }
 
   @media (min-width: @desktop-width) {
+    position: relative;
+    top: 150px;
+    right: 30px;
+
     width: 1220px;
   }
 }
@@ -83,7 +87,7 @@
   }
 }
 
-.intro__picture-wrapper {
+/*.intro__picture-wrapper {
   @media (min-width: @desktop-width) {
     content: "";
     position: absolute;
@@ -102,7 +106,7 @@
       background-image: url("../img/index-background-desktop@2x.jpg");
     }
   }
-}
+}*/
 
 .intro__image {
   content: "";
@@ -120,8 +124,8 @@
   }
 
   @media (min-width: @desktop-width) {
-    top: 20%;
-    left: -22%;
+    top: 5%;
+    left: 25.5%;
   }
 }
 
