--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -9,6 +9,12 @@
     width: auto;
     margin: 0;
   }
+
+  @media (min-width: @desktop-width) {
+    z-index: 10;
+
+    height: 60px;
+  }
 }
 
 .main-nav__toggle {
