--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -71,7 +71,7 @@
   .list-reset();
 
   @media (min-width: @tablet-width) {
-    margin-left: 0;
+    margin-left: 22px;
     margin-right: 0;
     padding-top: 0;
   }
@@ -137,6 +137,10 @@
 .copyright {
   display: flex;
   justify-content: space-between;
+
+  @media (min-width: @tablet-width) {
+    margin-right: 0;
+  }
 }
 
 .copyright__text {
@@ -157,28 +161,18 @@
   display: block;
   margin-top: 7px;
 
-  width: 27px;
-  height: 34px;
-
   @media (min-width: @tablet-width) {
-    margin-top: 0;
-    margin-left: 23px;
+    margin-top: -9px;
+    margin-left: 17px;
   }
 }
 
-.copyright__icon-htmlacademy {
-  width: 27px;
-  height: 34px;
-
-  fill: #666666;
-}
-
-.copyright__icon-htmlacademy:hover {
+.copyright__htmlacademy:hover path {
   fill: @main-color;
 }
 
-.copyright__icon-htmlacademy:focus,
-.copyright__icon-htmlacademy:active {
+.copyright__htmlacademy:focus path,
+.copyright__htmlacademy:active path {
   fill: @main-color;
   opacity: 0.3;
 }
