--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -19,6 +19,29 @@
   }
 }
 
+.page-header--bg {
+  @media (min-width: @desktop-width) {
+    content: "";
+    position: absolute;
+    top: 0;
+    right: 0;
+    z-index: 0;
+
+    width: 50%;
+    height: 696px;
+
+    background-color: #64a83b;
+    background-image: url("../img/index-background-desktop@1x.jpg");
+    background-repeat: no-repeat;
+    background-position: 30% 0;
+    background-size: 110%;
+
+    @media (min-resolution: 144dpi), (min-resolution: 1.5dppx) {
+      background-image: url("../img/index-background-desktop@2x.jpg");
+    }
+  }
+}
+
 .page-header__logo {
   display: block;
   margin-bottom: 15px;
@@ -30,6 +53,11 @@
   }
 
   @media (min-width: @desktop-width) {
+    content: "";
+    position: absolute;
+    top: 53px;
+    left: -90%;
+
     margin-top: 0;
   }
 }
