--- a/source/less/blocks/demonstration.less
+++ b/source/less/blocks/demonstration.less
@@ -317,125 +317,126 @@
   -webkit-box-direction: normal;
   -ms-flex-direction: column;
   flex-direction: column;
-  }
+}
 
-  @media (max-width: @tablet-width) {
-    .demonstration__wrapper {
-      background-color: @background-color;
-    }
-  }
-
-  @media (min-width: @desktop-width) {
-    .demonstration__wrapper {
-      -webkit-box-orient: horizontal;
-      -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-      flex-direction: row;
-      -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-      max-width: 1300px;
-      margin: 0 auto;
-    }
-
-    .demonstration__wrapper::before {
-      content:"";
-      position: absolute;
-      left: 0;
-      z-index: -1;
-      width: 100%;
-      height: 463px;
-      background: -webkit-gradient(linear,left top,right top, color-stop(72.6%,@background-color), color-stop(27.4%,#eaeaea));
-      background: linear-gradient(to right,@background-color 72.6%,#eaeaea 27.4%);
-    }
-  }
-
-  .demonstration__example,
-  .demonstration__header,
-  .demonstration__image {
+@media (max-width: @tablet-width) {
+  .demonstration__wrapper {
     background-color: @background-color;
   }
+}
 
-  @media (min-width: @tablet-width) {
-    .demonstration__header {
-      background-color: #ffffff;
-    }
+@media (min-width: @desktop-width) {
+  .demonstration__wrapper {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: row;
+    flex-direction: row;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    max-width: 1300px;
+    margin: 0 auto;
   }
 
-  @media (min-width: @desktop-width) {
-    .demonstration__header {
-      max-width: @desktop-width;
-      margin: 0 auto;
-    }
+  .demonstration__wrapper::before {
+    content:"";
+    position: absolute;
+    left: 0;
+    z-index: -1;
+    width: 100%;
+    height: 463px;
+    background: -webkit-gradient(linear,left top,right top, color-stop(72.6%,@background-color), color-stop(27.4%,#eaeaea));
+    background: linear-gradient(to right,@background-color 72.6%,#eaeaea 27.4%);
   }
+ }
 
+.demonstration__example,
+.demonstration__header,
+.demonstration__image {
+  background-color: @background-color;
+}
+
+@media (min-width: @tablet-width) {
+  .demonstration__header {
+    background-color: #ffffff;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .demonstration__header {
+    max-width: @desktop-width;
+    margin: 0 auto;
+    margin-left: 90px;
+  }
+}
+
+.demonstration__example {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  width: auto;
+  margin: 0 6.25%;
+}
+
+@media (min-width: @tablet-width) {
   .demonstration__example {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: row;
+    flex-direction: row;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    margin: 38px 3.9% 246px;
+    background-color: #ffffff;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .demonstration__example {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
     -ms-flex-direction: column;
     flex-direction: column;
-    -webkit-box-pack: justify;
-    -ms-flex-pack: justify;
-    justify-content: space-between;
-    width: auto;
-    margin: 0 6.25%;
+    width: 43.84%;
+    margin: 55px 3.07% 70px;
+    background-color: transparent;
   }
+}
+
+.demonstration__header h2 {
+  width: auto;
+  margin: 0 6.25%;
+  padding-top: 17px;
+  padding-bottom: 10px;
+
+  padding-right: 20px;
+
+  font-size: @big-font-size;
+  line-height: 60px;
+  font-weight: normal;
+  text-transform: none;
+  text-align: left;
+  color: @color-title;
 
   @media (min-width: @tablet-width) {
-    .demonstration__example {
-      -webkit-box-orient: horizontal;
-      -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-      flex-direction: row;
-      -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-      margin: 38px 3.9% 246px;
-      background-color: #ffffff;
-    }
+    width: auto;
+    margin-top: 26px;
+    margin-right: 3.91%;
+    margin-left: 3.91%;
+    font-size: 60px;
   }
 
   @media (min-width: @desktop-width) {
-    .demonstration__example {
-      -webkit-box-orient: vertical;
-      -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-      flex-direction: column;
-      width: 43.84%;
-      margin: 55px 3.07% 70px;
-      background-color: transparent;
-    }
-  }
-
-  .demonstration__header h2 {
     width: auto;
-    margin: 0 6.25%;
-    padding-top: 17px;
-    padding-bottom: 10px;
-
-    padding-right: 20px;
-
-    font-size: @big-font-size;
-    line-height: 60px;
-    font-weight: normal;
-    text-transform: none;
-    text-align: left;
-    color: @color-title;
-
-    @media (min-width: @tablet-width) {
-      width: auto;
-      margin-top: 26px;
-      margin-right: 3.91%;
-      margin-left: 3.91%;
-      font-size: 60px;
-    }
-
-    @media (min-width: @desktop-width) {
-      width:auto;
-      margin:65px 3.07%;
-    }
+    margin: 65px 3.07%;
   }
+}
 
   .demonstration__description {
     margin-bottom: 24px;
@@ -457,9 +458,8 @@
     @media (min-width: @desktop-width) {
       z-index: 0;
       margin-bottom: 41px;
-      padding-left: 0;
-      padding-right: 5px;
-      width: 440px;
+      padding-right: 17px;
+      width: 436px;
     }
   }
 
@@ -504,7 +504,7 @@
     font-weight: 400;
     font-size: 24px;
     line-height: 24px;
-    font-family: @fancy-font-one,"Arial",sans-serif;
+    font-family: @fancy-font-one, "Arial", sans-serif;
     text-align: center;
     text-transform: uppercase;
     border: 1px solid @border-color-one;
@@ -593,7 +593,7 @@
     font-weight: 400;
     font-size: 14px;
     line-height: 20px;
-    font-family: @fancy-font-one,"Arial",sans-serif;
+    font-family: @fancy-font-one, "Arial", sans-serif;
     text-align: center;
     text-transform: uppercase;
   }
