--- a/source/less/blocks/intro.less
+++ b/source/less/blocks/intro.less
@@ -10,7 +10,7 @@
   }
 
   @media (min-width: @desktop-width) {
-    margin-left: 180px;
+    margin-left: 160px;
     margin-bottom: -120px;
   }
 }
@@ -23,10 +23,6 @@
   }
 
   @media (min-width: @desktop-width) {
-    position: relative;
-    top: 150px;
-    right: 30px;
-
     width: 1220px;
   }
 }
@@ -87,15 +83,14 @@
   }
 }
 
-/*.intro__picture-wrapper {
+.intro__picture-wrapper {
   @media (min-width: @desktop-width) {
     content: "";
     position: absolute;
-    left: 42.7%;
+    right: 160px;
     bottom: 220px;
-    z-index: 0;
 
-    width: 720px;
+    width: 50%;
     height: 696px;
 
     background-color: @main-color;
@@ -106,7 +101,7 @@
       background-image: url("../img/index-background-desktop@2x.jpg");
     }
   }
-}*/
+}
 
 .intro__image {
   content: "";
@@ -124,8 +119,8 @@
   }
 
   @media (min-width: @desktop-width) {
-    top: 5%;
-    left: 25.5%;
+    top: 25%;
+    left: -23.5%;
   }
 }
 
