--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -13,8 +13,8 @@
 
   @media (min-width: @desktop-width) {
     margin: 0 auto;
-    padding-left: 70px;
-    padding-right: 70px;
+    padding-left: 100px;
+
     width: 100%;
   }
 }
@@ -32,6 +32,7 @@
   @media (min-width: @desktop-width) {
     width: 1220px;
   }
+
   @media (min-width: @tablet-width) {
     display: flex;
     justify-content: space-between;
@@ -140,6 +141,10 @@
 
   @media (min-width: @tablet-width) {
     margin-right: 0;
+  }
+
+  @media (min-width: @desktop-width) {
+    margin-right: 100px;
   }
 }
 
