--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -14,23 +14,23 @@
 
     justify-content: space-between;
     padding-top: 53px;
-    padding-left: 109px;
+    padding-left: 90px;
     padding-right: 60px;
   }
 }
 
-.page-header--bg {
+/*.page-header--bg {
   @media (min-width: @desktop-width) {
     content: "";
     position: absolute;
     top: 0;
     right: 0;
-    z-index: 0;
+    z-index: 5;
 
     width: 50%;
     height: 696px;
 
-    background-color: #64a83b;
+    background-color: @main-color;
     background-image: url("../img/index-background-desktop@1x.jpg");
     background-repeat: no-repeat;
     background-position: 30% 0;
@@ -40,7 +40,7 @@
       background-image: url("../img/index-background-desktop@2x.jpg");
     }
   }
-}
+}*/
 
 .page-header__logo {
   display: block;
@@ -53,10 +53,8 @@
   }
 
   @media (min-width: @desktop-width) {
-    content: "";
-    position: absolute;
-    top: 53px;
-    left: -90%;
+    position: relative;
+    bottom: 7px;
 
     margin-top: 0;
   }
