--- a/source/less/blocks/page-main.less
+++ b/source/less/blocks/page-main.less
@@ -22,6 +22,14 @@
   }
 }
 
+.page-main__title--catalog {
+  margin-bottom: 30px;
+
+  @media (min-width: @tablet-width) {
+    margin-bottom: 160px;
+  }
+}
+
 .page-main__title--form {
   @media (min-width: @tablet-width) {
     margin-bottom: 53px;
