--- a/source/less/blocks/program-type.less
+++ b/source/less/blocks/program-type.less
@@ -13,7 +13,8 @@
   @media (min-width: @desktop-width) {
     display: flex;
     margin-bottom: 79px;
-    margin-left: 109px;
+    margin-left: 90px;
+    margin-right: 100px;
   }
 }
 
