--- a/source/less/blocks/site-list.less
+++ b/source/less/blocks/site-list.less
@@ -15,9 +15,9 @@
     margin: 0 auto;
   }
 
-  /*@media (min-width: @desktop-width) {
-    margin-right: 45px;
-  }*/
+  @media (min-width: @desktop-width) {
+    /*margin-right: 45px;*/
+  }
 }
 
 .site-list__item {
@@ -25,11 +25,6 @@
 
   @media (min-width: @tablet-width) {
     border-bottom: none;
-  }
-
-  @media (min-width: @desktop-width) {
-    position: relative;
-    z-index: 10;
   }
 }
 
@@ -70,9 +65,6 @@
   }
 
   @media (min-width: @desktop-width) {
-    position: relative;
-    z-index: 10;
-
     padding-top: 5px;
 
     font-size: 20px;
